When reading the album move hints and looking for the src collection, dont look it up in the list of currently scanned collections, but in the list of all collections - the src collection may be scanned previously or later.

BUG: 231598

svn path=/trunk/extragear/graphics/digikam/; revision=1116055